pkg/config/analysis/analyzers/testdata/conflicting-gateways.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: beta
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: tcp
        protocol: TCP
      hosts:
        - "foo.bar"
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: alpha
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "foo.bar"
